[gd_scene load_steps=4 format=3 uid="uid://dox7cpm0jks1x"]

[ext_resource type="Script" path="res://menu.gd" id="1_kjb8m"]
[ext_resource type="Texture2D" uid="uid://crgfgt53l5cu8" path="res://Images/TitleScreen.png" id="2_plctb"]
[ext_resource type="FontFile" uid="uid://crsqx7oo8aarw" path="res://Fonts/ARCADE_I.TTF" id="2_v26hf"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kjb8m")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -3.0
offset_top = 5.0
offset_right = 1932.0
offset_bottom = 1099.0
texture = ExtResource("2_plctb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -283.0
offset_right = 452.0
grow_vertical = 0

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 80)
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme_override_colors/font_color = Color(0.854902, 0.764706, 0.0627451, 0.87451)
theme_override_colors/font_focus_color = Color(0.976471, 0.976471, 0.976471, 1)
theme_override_fonts/font = ExtResource("2_v26hf")
theme_override_font_sizes/font_size = 38
text = "Start Game
"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 80)
layout_mode = 2
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../StartButton")
theme_override_colors/font_color = Color(0.854902, 0.764706, 0.0627451, 0.87451)
theme_override_fonts/font = ExtResource("2_v26hf")
theme_override_font_sizes/font_size = 38
text = "Quit to Desktop
"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
